Change the API to use etags and if-match headers to deal with optimistic updates.
